# bazelbuild

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/bazelbuild/: __init__.py
