[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bazelbuild"
description = "A PEP 517 build backend for Bazel."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = { text = "Apache-2.0" }
authors = [
    { name = "Nicholas Junge", email = "nicho.junge@gmail.com" },
]
maintainers = [
    { name = "Nicholas Junge", email = "nicho.junge@gmail.com" },
]
